--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn
 autogen-agentchat==0.4.0dev1
 azure-cosmos
-azure-monitor
+azure-monitor-opentelemetry
 azure-identity
 python-dotenv
 python-multipart
