--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn
 autogen-agentchat==0.4.0dev1
 azure-cosmos
 azure-monitor-opentelemetry
+azure-monitor-events-extension
 azure-identity
 python-dotenv
 python-multipart
