--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -43,6 +43,8 @@ jobs:
         run: |
           echo "inputs.push: ${{ inputs.push }}"
           echo "github.ref_name: ${{ github.ref_name }}"
+          echo "github.event_name: ${{ github.event_name }}"
+
           
       - name: Set Docker image tag
         run: |
