Updated Workflow Names Updated Deployment Trigger Schedule

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,11 @@
-name: CI-Validate Deployment-Multi-Agent-Custom-Automation-Engine-Solution-Accelerator
+name: Validate Deployment
 
 on:
   push:
     branches:
       - main
   schedule:
-    - cron: '0 6,18 * * *'  # Runs at 6:00 AM and 6:00 PM GMT
+    - cron: '0 11,23 * * *'  # Runs at 11:00 AM and 11:00 PM GMT
 
 jobs:
   deploy:
