--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
           export AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
           export AZURE_SUBSCRIPTION_ID="${{ secrets.AZURE_SUBSCRIPTION_ID }}"
           export GPT_MIN_CAPACITY="50"
+          export AZURE_REGIONS="${{ vars.AZURE_REGIONS }}"
 
           chmod +x deploy/scripts/checkquota.sh
           if ! deploy/scripts/checkquota.sh; then
