add new libraries for semantic kernel

--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -14,3 +14,4 @@ opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-openai
 opentelemetry-exporter-otlp-proto-http
 opentelemetry-exporter-otlp-proto-grpc
+semantic-kernel
