refractor multi agents

--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -15,3 +15,10 @@ opentelemetry-instrumentation-openai
 opentelemetry-exporter-otlp-proto-http
 opentelemetry-exporter-otlp-proto-grpc
 semantic-kernel
+azure-ai-projects 
+azure-identity 
+openai 
+azure-ai-inference 
+azure-search-documents 
+azure-ai-evaluation 
+azure-monitor-opentelemetry
