update ai project client

--- a/src/backend/.env.sample
+++ b/src/backend/.env.sample
@@ -6,6 +6,10 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
 AZURE_OPENAI_API_VERSION=2024-08-01-preview
 APPLICATIONINSIGHTS_INSTRUMENTATION_KEY=
+AZURE_AI_PROJECT_ENDPOINT=
+AZURE_AI_SUBSCRIPTION_ID=
+AZURE_AI_RESOURCE_GROUP=
+AZURE_AI_PROJECT_NAME=
 
 BACKEND_API_URL='http://localhost:8000'
 FRONTEND_SITE_NAME='http://127.0.0.1:3000'
