refractory for app_config

--- a/src/backend/.env.sample
+++ b/src/backend/.env.sample
@@ -12,6 +12,7 @@ AZURE_AI_PROJECT_ENDPOINT=
 AZURE_AI_SUBSCRIPTION_ID=
 AZURE_AI_RESOURCE_GROUP=
 AZURE_AI_PROJECT_NAME=
+AZURE_AI_AGENT_PROJECT_CONNECTION_STRING=
 APPLICATIONINSIGHTS_CONNECTION_STRING=
 
 
