azd up working, issue with input_tasks

--- a/azure.yaml
+++ b/azure.yaml
@@ -1,14 +1,18 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
-environment:
-  name: multi-agent-custom-automation-engine-solution-accelerator
-  location: eastus
+
 name: multi-agent-custom-automation-engine-solution-accelerator
-# metadata:
-#     template: azd-init@1.13.0
-parameters:
-  baseUrl:
-    type: string
-    default: 'https://github.com/TravisHilbert/Modernize-your-code-solution-accelerator'
-deployment:
-  mode: Incremental
-  template: ./infra/main.bicep  # Path to the main.bicep file inside the 'deployment' folder
+metadata:
+    template: azd-init@1.14.0
+services:
+    backend:
+        project: src/backend
+        host: containerapp
+        language: python
+        docker:
+            path: Dockerfile
+    frontend:
+        project: src/frontend
+        host: containerapp
+        language: python
+        docker:
+            path: Dockerfile
