--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,5 +1,7 @@
 fastapi
 uvicorn
+autogen-agentchat==0.4.0dev1
+autogen-core==0.4.0dev1
 azure-cosmos
 azure-monitor-opentelemetry
 azure-monitor-events-extension
