--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,12 @@
 {
     "name": "Multi Agent Custom Automation Engine Solution Accelerator",
-    "image": "mcr.microsoft.com/devcontainers/javascript-node:20-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
     "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {
-        },
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {},
         "ghcr.io/azure/azure-dev/azd:latest": {},
-        "ghcr.io/devcontainers/features/azure-cli:1": {}
+        "ghcr.io/devcontainers/features/node:1": {},
+        "ghcr.io/devcontainers/features/azure-cli:1": {},
+        "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
     },
     "customizations": {
         "vscode": {
@@ -18,12 +19,29 @@
                 "ms-azuretools.vscode-bicep",
                 "ms-azuretools.vscode-docker",
                 "ms-vscode.js-debug",
-                "ms-vscode.vscode-node-azure-pack"
+                "ms-vscode.vscode-node-azure-pack",
+                "charliermarsh.ruff",
+                "exiasr.hadolint",
+                "kevinrose.vsc-python-indent",
+                "mosapride.zenkaku",
+                "ms-python.python",
+                "njpwerner.autodocstring",
+                "redhat.vscode-yaml",
+                "shardulm94.trailing-spaces",
+                "tamasfe.even-better-toml",
+                "yzhang.markdown-all-in-one",
+                "ms-vscode.azure-account"
             ]
         }
     },
-    "forwardPorts": [3000, 3100],
-    "remoteUser": "node",
+    "postCreateCommand": "bash ./.devcontainer/setupEnv.sh",
+    "containerEnv": {
+        "DISPLAY": "dummy",
+        "PYTHONUNBUFFERED": "True",
+        "UV_LINK_MODE": "copy",
+        "UV_PROJECT_ENVIRONMENT": "/home/vscode/.venv"
+    },
+    "remoteUser": "vscode",
     "hostRequirements": {
         "memory": "8gb"
     }
