--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -14,7 +14,7 @@ opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-openai
 opentelemetry-exporter-otlp-proto-http
 
-semantic-kernel
+semantic-kernel[azure]
 azure-ai-projects 
 openai 
 azure-ai-inference 
