--- a/.github/workflows/azure-dev-validation.yml
+++ b/.github/workflows/azure-dev-validation.yml
@@ -1,5 +1,10 @@
 name: Azure Template Validation
 on:
+  push:
+    branches:
+      - dev
+      - main
+      - feature/azd-semantickernel
   workflow_dispatch: 
 
 permissions:
