--- a/.github/workflows/azure-dev-validation.yml
+++ b/.github/workflows/azure-dev-validation.yml
@@ -5,37 +5,36 @@ on:
       - dev
       - main
       - feature/azd-semantickernel
-  workflow_dispatch:
+  workflow_dispatch: 
+
 permissions:
   contents: read
   id-token: write
   pull-requests: write
+
 jobs:
   template_validation_job:
     runs-on: ubuntu-latest
     name: Template validation
+
     steps:
       # Step 1: Checkout the code from your repository
       - name: Checkout code
         uses: actions/checkout@v4
-        
-      # Step 2: Azure login using OIDC
-      - name: Azure login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          
-      # Step 3: Validate the Azure template using microsoft/template-validation-action
+
+      # Step 2: Validate the Azure template using microsoft/template-validation-action
       - name: Validate Azure Template
         uses: microsoft/template-validation-action@v0.3.5
         id: validation
         env:
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           AZURE_ENV_NAME: ${{ secrets.AZURE_ENV_NAME }}
           AZURE_LOCATION: ${{ secrets.AZURE_LOCATION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      # Step 4: Print the result of the validation
+
+
+      # Step 3: Print the result of the validation
       - name: Print result
         run: cat ${{ steps.validation.outputs.resultFile }}
