--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi
 uvicorn
-autogen-agentchat==0.4.0dev1
+
 azure-cosmos
 azure-monitor-opentelemetry
 azure-monitor-events-extension
@@ -13,6 +13,14 @@ opentelemetry-exporter-otlp-proto-grpc
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-openai
 opentelemetry-exporter-otlp-proto-http
+
+semantic-kernel[azure]
+azure-ai-projects 
+openai 
+azure-ai-inference 
+azure-search-documents 
+azure-ai-evaluation
+
 opentelemetry-exporter-otlp-proto-grpc
 
 # Testing tools
