--- a/.azdo/pipelines/azure-dev.yml
+++ b/.azdo/pipelines/azure-dev.yml
@@ -4,6 +4,7 @@ trigger:
   - main
   - master
   - feature/azd-semantickernel
+  - gpickett-patch-6
 
 # Azure Pipelines workflow to deploy to Azure using azd
 # To configure required secrets and service connection for connecting to Azure, simply run `azd pipeline config --provider azdo`
