--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -47,7 +47,7 @@ jobs:
 
       # Step 5: Validate the Azure template
       - name: Validate Azure Template
-        uses: microsoft/template-validation-action@Latest
+        uses: microsoft/template-validation-action@v0.3.5
         id: validation
         env:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
