--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -7,6 +7,7 @@ on:
       - dev
       - demo
       - hotfix
+      - feature/pylintfix
   pull_request:
     types:
       - opened
@@ -32,7 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to Azure Container Registry
-        if: ${{ github.ref_name == 'main' || github.ref_name == 'dev' || github.ref_name == 'demo' || github.ref_name == 'hotfix' }}
+        if: ${{ github.ref_name == 'main' || github.ref_name == 'dev' || github.ref_name == 'demo' || github.ref_name == 'hotfix' || github.ref_name == 'feature/pylintfix'}}
         uses: azure/docker-login@v2
         with:
           login-server: ${{ secrets.ACR_LOGIN_SERVER }}
@@ -53,6 +54,8 @@ jobs:
           elif [[ "${{ github.ref }}" == "refs/heads/demo" ]]; then
             echo "TAG=demo" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/hotfix" ]]; then
+            echo "TAG=hotfix" >> $GITHUB_ENV
+          elif [[ "${{ github.ref }}" == "refs/heads/feature/pylintfix" ]]; then
             echo "TAG=hotfix" >> $GITHUB_ENV
           else
             echo "TAG=pullrequest-ignore" >> $GITHUB_ENV
