--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      
+      - name: Get registry
+        id: registry
+        run: |
+          echo "ext_registry=${{ secrets.ACR_LOGIN_SERVER || 'acrlogin.azurecr.io'}}" >> $GITHUB_OUTPUT
 
       - name: Determine Tag Name Based on Branch
         id: determine_tag
@@ -64,6 +69,8 @@ jobs:
           RUN_ID=${{ github.run_number }}
           # Create historical tag using TAG, DATE_TAG, and RUN_ID
           echo "HISTORICAL_TAG=${{ env.TAG }}_${DATE_TAG}_${RUN_ID}" >> $GITHUB_ENV
+      
+      
 
       - name: Build and optionally push Backend Docker image
         uses: docker/build-push-action@v6
@@ -72,8 +79,8 @@ jobs:
           file: ./src/backend/Dockerfile
           push: ${{ env.TAG != 'pullrequest-ignore' }}
           tags: |
-            ${{ secrets.ACR_LOGIN_SERVER }}/macaebackend:${{ env.TAG }}
-            ${{ secrets.ACR_LOGIN_SERVER }}/macaebackend:${{ env.HISTORICAL_TAG }}
+            ${{ steps.registry.outputs.ext_registry }}/macaebackend:${{ env.TAG }}
+            ${{ steps.registry.outputs.ext_registry }}/macaebackend:${{ env.HISTORICAL_TAG }}
   
       - name: Build and optionally push Frontend Docker image
         uses: docker/build-push-action@v6
@@ -82,5 +89,5 @@ jobs:
           file: ./src/frontend/Dockerfile
           push: ${{ env.TAG != 'pullrequest-ignore' }}
           tags: |
-            ${{ secrets.ACR_LOGIN_SERVER }}/macaefrontend:${{ env.TAG }}
-            ${{ secrets.ACR_LOGIN_SERVER }}/macaefrontend:${{ env.HISTORICAL_TAG }}
+            ${{ steps.registry.outputs.ext_registry }}/macaefrontend:${{ env.TAG }}
+            ${{ steps.registry.outputs.ext_registry }}/macaefrontend:${{ env.HISTORICAL_TAG }}
