add vite remoev react-scripts

--- a/src/frontend_react/.gitignore
+++ b/src/frontend_react/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -17,6 +18,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Vite
+.vite/
+*.local
 
 npm-debug.log*
 yarn-debug.log*
