--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,7 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
-            --parameters azureOpenAILocation=${{env.AZURE_LOCATION }} cosmosLocation=${{env.AZURE_LOCATION }}
+            --parameters azureOpenAILocation=${{env.AZURE_LOCATION }} 
 
 
       - name: Send Notification on Failure
@@ -170,7 +170,7 @@ jobs:
 
           
       - name: Delete Bicep Deployment
-        if: success()
+        
         run: |
           set -e  
           echo "Checking if resource group exists..."
@@ -240,7 +240,7 @@ jobs:
 
           
       - name: Purging the Resources
-        if: success()
+        
         run: |
 
           set -e 
