--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,6 +102,7 @@ jobs:
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
             --parameters azureOpenAILocation=${{env.AZURE_LOCATION }} 
+            --debug
 
 
       - name: Send Notification on Failure
