--- a/src/frontend_react/public/manifest.json
+++ b/src/frontend_react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Multi-Agent-Custom-Automation-Engine",
+  "name": "Multi-Agent-Custom-Automation-Engine",
   "icons": [
     {
       "src": "favicon.ico",
