FDP-Backend_Changes

--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -14,9 +14,9 @@ opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-openai
 opentelemetry-exporter-otlp-proto-http
 
-semantic-kernel[azure]==1.28.1
-azure-ai-projects==1.0.0b10 
-openai 
+semantic-kernel[azure]==1.32.2
+azure-ai-projects==1.0.0b11
+openai==1.84.0 
 azure-ai-inference==1.0.0b9 
 azure-search-documents 
 azure-ai-evaluation
