--- a/src/backend/.env.sample
+++ b/src/backend/.env.sample
@@ -14,7 +14,7 @@ AZURE_AI_RESOURCE_GROUP=
 AZURE_AI_PROJECT_NAME=
 AZURE_AI_MODEL_DEPLOYMENT_NAME=gpt-4o
 AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME=gpt-4o
-#APPLICATIONINSIGHTS_CONNECTION_STRING=
+APPLICATIONINSIGHTS_CONNECTION_STRING=
 AZURE_AI_AGENT_ENDPOINT=
 
 BACKEND_API_URL=http://localhost:8000
