--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,6 +101,7 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
+            --parameters infra/main.bicepparam \
             --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
 
 
