--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,8 +101,12 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
-            --parameters infra/main.bicepparam \
-            --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
+            --parameters \
+              azureOpenAILocation='${{ env.AZURE_LOCATION }}' \
+              logAnalyticsWorkspaceConfiguration='{"dataRetentionInDays": 30, "existingWorkspaceResourceId": ""}' \
+              applicationInsightsConfiguration='{"retentionInDays": 30}' \
+              virtualNetworkConfiguration='{"enabled": false}' \
+              webServerFarmConfiguration='{"skuCapacity": 1, "skuName": "B2"}'
 
 
       - name: Send Notification on Failure
