Rename azureOpenAILocation to aiDeploymentsLocation in deployment scripts and parameters

--- a/.github/workflows/deploy-waf.yml
+++ b/.github/workflows/deploy-waf.yml
@@ -102,7 +102,7 @@ jobs:
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
             --parameters \
-              azureOpenAILocation='${{ env.AZURE_LOCATION }}' \
+              aiDeploymentsLocation='${{ env.AZURE_LOCATION }}' \
               virtualMachineConfiguration='{"adminUsername": "adminuser", "adminPassword": "P@ssw0rd1234"}' \
               logAnalyticsWorkspaceConfiguration='{"existingWorkspaceResourceId": ""}'
 
