--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,7 +102,7 @@ jobs:
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
             --parameters \
-              azureOpenAILocation='${{ env.AZURE_LOCATION }}' \
+              aiDeploymentsLocation='${{ env.AZURE_LOCATION }}' \
               logAnalyticsWorkspaceConfiguration='{"dataRetentionInDays": 30, "existingWorkspaceResourceId": ""}' \
               applicationInsightsConfiguration='{"retentionInDays": 30}' \
               virtualNetworkConfiguration='{"enabled": false}' \
