Reduce GPT minimum capacity to 5 in deployment workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           export AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
           export AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
           export AZURE_SUBSCRIPTION_ID="${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-          export GPT_MIN_CAPACITY="140"
+          export GPT_MIN_CAPACITY="5"
           export AZURE_REGIONS="${{ vars.AZURE_REGIONS }}"
 
           chmod +x infra/scripts/checkquota.sh
@@ -104,6 +104,7 @@ jobs:
             --parameters \
               useWafAlignedArchitecture=false \
               aiDeploymentsLocation='${{ env.AZURE_LOCATION }}' \
+              gptModelCapacity=5 \
               logAnalyticsWorkspaceConfiguration='{"dataRetentionInDays": 30, "existingWorkspaceResourceId": ""}' \
               applicationInsightsConfiguration='{"retentionInDays": 30}' \
               virtualNetworkConfiguration='{"enabled": false}' \
